--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["mehrati <geekoffmail@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/mehrati/ccwd"
 description = "copy current working dirctory to clipboard"
-keywords = ["xset", "xclip", "pwd", "tool","path","clipboard","cli",]
+keywords = ["xset", "xclip", "pwd","clipboard","linux",]
 categories = ["cli tool"]
 readme = "README.md"
 documentation = ""
