--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT"
 repository = "https://github.com/mehrati/ccwd"
 description = "copy current working dirctory to clipboard"
 keywords = ["xset", "xclip", "pwd","clipboard","linux",]
-categories = ["cli tool"]
+categories = ["command-line-utilities"]
 readme = "README.md"
 documentation = "https://docs.rs/ccwd"
 [dependencies]
